--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
   <script>
     const RATES = { single: 80, double: 60 };
-    const TIME_OPTIONS = [ { label: '15 minutes', minutes: 15 }, { label: '30 minutes', minutes: 30 }, { label: '1 hour', minutes: 60 } ];
+    const TIME_OPTIONS = [ { label: '30 minutes', minutes: 30 }, { label: '1 hour', minutes: 60 }, { label: '5 minutes', minutes: 5 } ];
     const HISTORY_KEY = 'gameShopHistory';
     const alertSound = document.getElementById('alert-sound');
     const endSound = document.getElementById('end-sound');
